feat: add basic keyboard input handling to the created window

--- a/MAGE2D/MAGE2D.vcxproj
+++ b/MAGE2D/MAGE2D.vcxproj
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="WindowTest.cpp" />
+    <ClCompile Include="window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
