feat: add timer and FPS controller to manage frame rates

--- a/MAGE2D/MAGE2D.vcxproj
+++ b/MAGE2D/MAGE2D.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="src\engine\Engine.cpp" />
     <ClCompile Include="src\engine\Game.cpp" />
     <ClCompile Include="src\engine\Graphics.cpp" />
+    <ClCompile Include="src\engine\Timer.cpp" />
     <ClCompile Include="src\engine\Window.cpp" />
     <ClCompile Include="src\game\GameExample.cpp" />
   </ItemGroup>
@@ -141,6 +142,7 @@
     <ClInclude Include="src\engine\Engine.h" />
     <ClInclude Include="src\engine\Game.h" />
     <ClInclude Include="src\engine\Graphics.h" />
+    <ClInclude Include="src\engine\Timer.h" />
     <ClInclude Include="src\game\Resources.h" />
     <ClInclude Include="src\engine\Types.h" />
     <ClInclude Include="src\engine\Window.h" />
