--- a/MAGE2D/MAGE2D.vcxproj.filters
+++ b/MAGE2D/MAGE2D.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="src\engine\Graphics.cpp">
       <Filter>Engine\Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\engine\Timer.cpp">
+      <Filter>Engine\Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\engine\Window.h">
@@ -60,6 +63,9 @@
       <Filter>Game\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\engine\Graphics.h">
+      <Filter>Engine\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\engine\Timer.h">
       <Filter>Engine\Header Files</Filter>
     </ClInclude>
   </ItemGroup>
