feat: add shaders

--- a/MAGE2D/MAGE2D.vcxproj.filters
+++ b/MAGE2D/MAGE2D.vcxproj.filters
@@ -89,4 +89,8 @@
       <Filter>Game\Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="src\engine\shaders\Vertex.hlsl" />
+    <FxCompile Include="src\engine\shaders\Pixel.hlsl" />
+  </ItemGroup>
 </Project>
